# cmake-win-phone-app

./: CMakeLists.txt  README.md
